--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>groupId</groupId>
     <artifactId>fsm-complier</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+    </properties>
 
-    
 </project>
