--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,11 +21,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 19
+    - name: Set up JDK 9
       uses: actions/setup-java@v3
       with:
-        java-version: '19'
-        distribution: 'temurin'
+        java-version: '1.9'
+        distribution: 'adopt-openj9'
         cache: maven
     - name: Build with Maven
       run: mvn -B verify --file pom.xml
